--- a/packages/DavidSalazar_TicTacToe/index.html
+++ b/packages/DavidSalazar_TicTacToe/index.html
@@ -22,7 +22,8 @@
   <script type="text/javascript">
 
     //const BACKEND_URL = 'https://fbinstant-tictactoe-server.herokuapp.com';
-     const BACKEND_URL = 'http://localhost:5000';
+    const BACKEND_URL =  'https://davidsalazarpiedrapapeltijera.herokuapp.com';
+    //const BACKEND_URL = 'http://localhost:5000';
     const IMAGES = ['title_img', 'love', 'like', 'fill']
     var preloaded = {};
     
