Se agrega el secret Token en el .env

--- a/packages/DavidSalazar_TicTacToe/index.html
+++ b/packages/DavidSalazar_TicTacToe/index.html
@@ -24,7 +24,7 @@
     //const BACKEND_URL = 'https://fbinstant-tictactoe-server.herokuapp.com';
     const BACKEND_URL =  'https://davidsalazarpiedrapapeltijera.herokuapp.com';
     //const BACKEND_URL = 'http://localhost:5000';
-    const IMAGES = ['title_img', 'love', 'like', 'fill']
+    const IMAGES = ['title_img', 'gato', 'perro', 'fill']
     var preloaded = {};
     
     window.onload = function() {
